Bug 92994 - Be more specific in the case of authentication error
Summary: Be more specific in the case of authentication error
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-18 15:42 UTC by Marek Kasik
Modified: 2015-11-19 15:19 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Be more specific in the case of authentication error (4.66 KB, text/plain)
2015-11-18 15:42 UTC, Marek Kasik
Details

Description Marek Kasik 2015-11-18 15:42:04 UTC
Created attachment 119909 [details]
Be more specific in the case of authentication error

When an authentication error occurs SPICE_CLIENT_ERROR_AUTH_NEEDS_PASSWORD or SPICE_CLIENT_ERROR_AUTH_NEEDS_PASSWORD_AND_USERNAME is returned as a channel error. But it can happen that only username is needed when you use e.g. GSSAPI.
It would be useful to have SPICE_CLIENT_ERROR_AUTH_NEEDS_USERNAME so that clients don't show authentication prompt which asks for username and password in this case (so it asks just for username).

Attached patch adds the error.

It would be great if spice-gtk wouldn't ask for this at all and used default principal's name for such situations.
Comment 1 Victor Toso 2015-11-19 10:55:30 UTC
Comment on attachment 119909 [details]
Be more specific in the case of authentication error

Patch looks good. Could you please git-send-mail it to our mailing list?
spice-devel@lists.freedesktop.org
Comment 2 Marek Kasik 2015-11-19 14:44:20 UTC
(In reply to Victor Toso from comment #1)
> Comment on attachment 119909 [details]
> Be more specific in the case of authentication error
> 
> Patch looks good. Could you please git-send-mail it to our mailing list?
> spice-devel@lists.freedesktop.org

Thanks. I've sent the patch there but unfortunately it was send more times than I wanted (first use of git send-email...).
Comment 3 Victor Toso 2015-11-19 15:19:23 UTC
(In reply to Marek Kasik from comment #2)
> Thanks. I've sent the patch there but unfortunately it was send more times
> than I wanted (first use of git send-email...).

No problem :)

http://cgit.freedesktop.org/spice/spice-gtk/commit/?id=fd6cecaaa28705063a67f3543c6e709151de1794

Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.