Be more specific in the case of authentication error

This patch adds SPICE_CLIENT_ERROR_AUTH_NEEDS_USERNAME error
for the case when authentication fails because of missing username.
This can happen when GSSAPI method is used.

https://bugs.freedesktop.org/show_bug.cgi?id=92994